# Lux_transfer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VERIFICATION.md  analyzer.py  application.py  cache.py  docker-compose.yml  flights.py  formatter.py  handlers.py  http.py  http_client.py  jobs.py  main.py  models.py  pipeline.py  pyproject.toml  requirements.txt  settings.py  text.py  trains.py
scripts/: verify_tgv_times.py
src/: bot.py  config.py  models.py
src/handlers/: commands.py  scheduler.py
src/services/: analyzer.py  base.py  events.py  flights.py  formatter.py  report_pipeline.py  trains.py
src/taxibot/: __init__.py  __main__.py  application.py  jobs.py
src/taxibot/core/: __init__.py  config.py  http.py  text.py
src/taxibot/formatters/: __init__.py  report.py
src/taxibot/handlers/: __init__.py
src/taxibot/models/: __init__.py  domain.py
src/taxibot/services/: __init__.py  analyzer.py  flights.py  pipeline.py  trains_gtfs.py  trains_opendata.py  trains_realtime.py
src/utils/: cache.py  http.py
tests/: __init__.py  test_tgv_parsing.py
